<resources>
    <string name="app_name">ACTIVIDADES FIA UES</string>
    <string name="id_carrera">ID carrera</string>
    <string name="id_coordinador">ID del coordinador</string>
    <string name="nombre_carrera">Nombre carrera</string>
    <string name="nombre_coordinador">Nombre del coordinador</string>
    <string name="tipo_miembro">Tipo de miembro</string>
    <string name="grupo">Grupo</string>
    <string name="id_materias_activas">ID de materia activa</string>
    <string name="id_aula">ID del aula</string>
    <string name="cant_inscritos">Cantidad de inscritos</string>
    <string name="id_horario">ID del horario</string>
    <string name="desde_horario">Fecha de inicio</string>
    <string name="hasta_horario">Fecha de finalización</string>
    <string name="opciones">Opciones:</string>
    <string name="limpiar">Limpiar</string>
    <string name="insertar">Insertar</string>
    <string name="actualizar">Actualizar</string>
    <string name="consultar">Consultar</string>
    <string name="eliminar">Eliminar</string>
    <string name="id_materia">ID Materia</string>
    <string name="id_escuela">ID Escuela</string>
    <string name="nombre_materia">Nombre Materia</string>
    <string name="ciclo_materia">Ciclo Materia</string>
    <string name="layout_ingresar">Ingrese un registro</string>
    <string name="participantes">Cant. participantes</string>
    <string name="id_actividad">ID Actividad</string>
    <string name="id_detalle_actividad">ID Detalle Actividad</string>
    <string name="id_reservante">ID Encargado</string>
    <string name="id_usuario">ID Usuario</string>
    <string name="nombre_reservante">Nombre del reservante</string>
    <string name="nombre_escuela">Nombre de la escuela</string>
    <string name="tipo_reservante">Tipo de reservante</string>
    <string name="id_ciclo">ID del Ciclo</string>
    <string name="ciclo">Ciclo</string>
    <string name="fecha_inicio">Fecha de inicio del ciclo</string>
    <string name="fecha_fin">Fecha final del ciclo</string>
    <string name="id_horario_nuevo">ID Horario nuevo</string>
    <string name="id_hactividad_nueva">ID actividad nueva</string>
    <string name="id_coordinador_nuevo">ID coordinador nuevo</string>
    <string name="id_tipo_actividad">Tipo de actividad</string>
    <string name="id_valoracion">Valoracion</string>
    <string name="estado">Estado</string>
    <string name="fecha_actividad">Fecha</string>
    <string name="descripcion">Descripcion</string>
    <string name="id_detalle_responsable">ID del detalle del Responsable</string>
    <string name="Nombre_tipo_responsable">Tipo de responsable</string>
    <string name="nombre_tipo_actividad">Nombre del tipo de actividad</string>
    <string name="id_tipo_grupo">ID Tipo grupo</string>
    <string name="fk_grupo">Grupo</string>
    <string name="nom_tipo_grupo">Nombre tipo de grupo</string>
    <string name="insertarAlumno">Insertar</string>
    <string name="idValoracion">Id</string>
    <string name="valoracion">Valoracion</string>
    <string name="limpiarValoracion">Limpiar</string>
    <string name="Tituloconsultar">Consultar Valoracion</string>
    <string name="ActualizarValoracion">Actualizar</string>
    <string name="EliminarValoracion">Eliminar</string>
    <string name="idMateriasActivas">Id materia activa</string>
    <string name="idCiclo">Id ciclo</string>
    <string name="idMateria">Id materia</string>
    <string name="idCoordinador">Id coordinador</string>
    <string name="nombreMateriaActiva">Nombre materia activa</string>
    <string name="cicloMateriaActiva">Ciclo materia activa</string>
    <string name="insertarOfertaA">Insertar</string>
    <string name="limpiarOfertaA">Limpiar</string>
    <string name="actualizarOfertaA">Actualizar</string>
    <string name="eliminarOfertaA">Eliminar</string>
    <string name="idAula">id Local</string>
    <string name="idReservante">id Reservante</string>
    <string name="nombreAula">Nombre Local</string>
    <string name="cupo">Cupo</string>
    <string name="insertarLoc">Insertar</string>
    <string name="actualizarLoc">Actualizar</string>
    <string name="eliminarLoc">Eliminar</string>
    <string name="consultarLoc">Consultar</string>
    <string name="LimpiarLoc">Limpiar</string>
    <string name="inSesion">Inicio de Sesión</string>
    <string name="nomUsuario">Nombre de usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="confcontraseña">Confirmar contraseña</string>
    <string name="iniciarSesion">INICIAR SESIÓN</string>
    <string name="resgistrar">REGISTRAR</string>
    <string name="regisUsuario">Registro de usuario</string>
    <string name="yaCuenta">YA POSEO UNA CUENTA</string>




</resources>