<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:paddingTop="30dip"
    android:stretchColumns="1">

    <TableRow>

        <TextView android:text="@string/idAula" />

        <EditText
            android:id="@+id/editIdAula"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/idReservante" />

        <EditText
            android:id="@+id/editIdReservante"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/nombreAula" />

        <EditText
            android:id="@+id/editNombreLocal"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/cupo" />

        <EditText
            android:id="@+id/editCupo"
            android:inputType="number"
            />
    </TableRow>




    <TableRow>

        <TextView android:text="@string/opciones" />
    </TableRow>

    <TableRow>

        <Button
            android:onClick="insertarLocal"
            android:text="@string/insertarLoc" />

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/LimpiarLoc" />
    </TableRow>
</TableLayout>