<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/id_actividad"/>
        <EditText
            android:id="@+id/editId_actividad"
            android:inputType="text"
            android:maxLength="6" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:text="@string/id_tipo_actividad"/>
        <EditText
            android:id="@+id/editId_tipo_actividad"
            android:inputType="text"
            android:maxLength="6" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:text="@string/id_valoracion"/>
        <EditText
            android:id="@+id/editId_valoracion"
            android:inputType="text"
            android:maxLength="6" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:text="@string/id_reservante" />

        <EditText
            android:id="@+id/editId_reservante"
            android:inputType="text"
            android:maxLength="50" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:text="@string/grupo" />

        <EditText
            android:id="@+id/editGrupo"
            android:inputType="text"
            android:maxLength="50" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:text="@string/descripcion" />

        <EditText
            android:id="@+id/editDescripcion"
            android:inputType="text"
            android:maxLength="50" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:text="@string/estado" />

        <EditText
            android:id="@+id/editEstado"
            android:inputType="text"
            android:maxLength="50" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:text="@string/fecha_actividad" />

        <EditText
            android:id="@+id/editFecha_actividad"
            android:inputType="text"
            android:maxLength="50" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:text="@string/desde_horario" />

        <EditText
            android:id="@+id/editDesde_actividad"
            android:inputType="text"
            android:maxLength="50" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:text="@string/hasta_horario" />

        <EditText
            android:id="@+id/editHasta_actividad"
            android:inputType="text"
            android:maxLength="50" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="actualizarActividad"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>