<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/id_materia" />
        <EditText
            android:id="@+id/editId_materia"
            android:inputType="text"
            android:maxLength="6" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/id_escuela" />
        <EditText
            android:id="@+id/editId_escuela"
            android:inputType="text"
            android:maxLength="6" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombre_materia" />
        <EditText
            android:id="@+id/editNom_materia"
            android:inputType="text"
            android:maxLength="50" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/ciclo_materia" />
        <EditText
            android:id="@+id/editCiclo_materia"
            android:inputType="number"
            android:maxLength="2" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarMateria"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>