<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/id_reservante" />
        <EditText
            android:id="@+id/editId_reservante"
            android:inputType="number"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/id_usuario" />
        <EditText
            android:id="@+id/editId_usuario"
            android:inputType="text"
            android:maxLength="2" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombre_reservante" />
        <EditText
            android:id="@+id/editNom_reservante"
            android:inputType="text"
            android:maxLength="50" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/tipo_reservante" />
        <EditText
            android:id="@+id/editTipo_reservante"
            android:inputType="text"
            android:maxLength="10" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarEncargado"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>