<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:paddingTop="30dip"
    android:stretchColumns="1">

    <TableRow>

        <TextView android:text="@string/idValoracion" />

        <EditText
            android:id="@+id/editidVal"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/valoracion" />

        <EditText
            android:id="@+id/editval"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/opciones" />
    </TableRow>

    <TableRow>

        <Button
            android:onClick="insertarValoracion"
            android:text="@string/insertarAlumno" />

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiarValoracion" />
    </TableRow>
</TableLayout>