<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/id_tipo_grupo" />
        <EditText
            android:id="@+id/editId_tipoGrupo"
            android:inputType="text"
            android:maxLength="2" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/fk_grupo" />
        <EditText
            android:id="@+id/editTipoGrupo"
            android:inputType="text"
            android:maxLength="3" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nom_tipo_grupo" />
        <EditText
            android:id="@+id/editNom_tipoGrupo"
            android:inputType="text"
            android:maxLength="50" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarTipoGrupo"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>