<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/id_coordinador" />
        <EditText
            android:id="@+id/editId_coordinador"
            android:inputType="text"
            android:maxLength="3" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombre_coordinador" />
        <EditText
            android:id="@+id/editNombre_coordinador"
            android:inputType="text"
            android:maxLength="50" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/tipo_miembro" />
        <EditText
            android:id="@+id/editTipo_miembro"
            android:inputType="text"
            android:maxLength="10" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarAlumno"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>
