<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/id_horario"/>
        <EditText
            android:id="@+id/editId_horario"
            android:inputType="text"
            android:maxLength="3" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/desde_horario" />
        <EditText
            android:id="@+id/editDesde_horario"
            android:inputType="text"
            android:maxLength="3"
            />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/hasta_horario" />
        <EditText
            android:id="@+id/editHasta_horario"
            android:inputType="text"
            android:maxLength="3"
            />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarHorario"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>
