<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_reservante"/>
    <EditText
        android:id="@+id/editId_reservante"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="3"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_usuario"/>
    <EditText
        android:id="@+id/editId_usuario"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_reservante" />
    <EditText
        android:id="@+id/editNom_reservante"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="50"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participantes" />
    <EditText
        android:id="@+id/editParticipantes"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="10"/>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/botonConsultar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consultar"
            android:onClick="consultarEncargado"/>
        <Button
            android:id="@+id/botonLimpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limpiar"
            android:onClick="limpiarTexto"/>
    </LinearLayout>
</LinearLayout>